# midcircuitcdn-obs-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
cmake/: toolchain-mingw64.cmake
cmake/stubs/: obs-frontend-api.def  obs-frontend-api.exp  obs-frontend-api.lib  obs.def  obs.exp  obs.lib
data/locale/: en-US.ini
src/: plugin-macros.h  plugin-main.cpp  update_checker.cpp  update_checker.hpp
src/auth/: plugin_oauth.cpp  plugin_oauth.hpp  plugin_store.cpp  plugin_store.hpp
src/multistream/: multistream_output.cpp  multistream_output.hpp  multistream_store.cpp  multistream_store.hpp
src/obs_integration/: encoder_config.cpp  encoder_config.hpp  stream_config.cpp  stream_config.hpp
src/ui/: control_dock.cpp  control_dock.hpp  dashboard_dock.cpp  dashboard_dock.hpp  multistream_dialog.cpp  multistream_dialog.hpp  settings_dialog.cpp  settings_dialog.hpp
